 fdo#66278 - MathML export: distinguish inline/display equations.

Change-Id: Ia764c2fd64ab772342ce86f67ee290ab38dc4a83
Reviewed-on: https://gerrit.libreoffice.org/4607
Reviewed-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>
Tested-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>